# inception-core-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  VISION.md  agent.sent  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  sqlite:memory.db
client/: .gitignore  index.html  package.json  pnpm-lock.yaml
client/public/: README.md
client/src/: App.vue
client/src/assets/: base.css  main.css
client/src/layouts/: DefaultLayout.vue
client/src/router/: index.ts
client/src/views/: AboutView.vue  ChatView.vue  HomeView.vue  MemoryView.vue  SentienceView.vue
docs/: chromadb.md  docker.md  latent_memory.md  memory_system_design.md
src/: main.rs
src/agents/: agent.rs  mod.rs  sentience.rs  sentience_wrapper.rs
src/api/: handlers.rs  routes.rs
src/config/: settings.rs
src/icore/: context.rs  embed.rs  llm.rs  mod.rs  model.rs  protocol.rs
src/mcp/: context.rs  llm.rs  mod.rs  model.rs  protocol.rs
src/memory/: latent.rs  long_term.rs  mod.rs  short_term.rs
src/memory/semantic/: evaluator.rs  latent_graph.rs  mod.rs  object.rs  reflect.rs
