[package]
name = "inception-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["http1"] }
hyper = { version = "1", features = ["http1"] }
reqwest = { version = "0.11", features = ["json", "tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
jsonwebtoken = "9"
thiserror = "1"
dotenvy = "0.15"