[package]
name = "inception-icore-server"
version = "0.1.0"
edition = "2024"
license = "Proprietary"
license-file = "LICENSE"

[dependencies]
axum = { version = "0.7", features = ["http1", "json", "macros"] }
hyper = { version = "1", features = ["http1"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }
jsonwebtoken = "9"
thiserror = "1"
dotenvy = "0.15"
anyhow = "1.0"
rand = "0.8"
futures = "0.3"
once_cell = "1.18"

sentience = { path = "../sentience" }
